# kinova

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  curl_tests.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: cinemas.py  cinetixx.py  cities.py  genres.py  health.py  internal.py  movies.py  search.py  shows.py  unified.py
app/core/: config.py  exceptions.py
app/schemas/: cinema.py  cinetixx.py  city.py  common.py  movie.py  show.py  unified.py
app/services/: cache.py  cinetixx.py  cinetixx_cache.py  cinetixx_client.py  graphql_client.py  kinoheld.py  llm_client.py  nl_search.py  sync.py  unified.py
tests/: conftest.py
tests/api/v1/: test_cinemas.py  test_cinetixx.py  test_errors.py  test_health.py  test_internal.py  test_internal_cinetixx.py  test_internal_unified.py  test_movies.py  test_shows.py
tests/core/: test_config.py
tests/schemas/: test_cinema.py  test_common.py  test_movie.py  test_show.py
tests/services/: test_cache.py  test_cinetixx_cache.py  test_cinetixx_service.py  test_kinoheld.py  test_nl_search.py
